--- a/index.htm
+++ b/index.htm
@@ -70,7 +70,7 @@
       <div class="layout-title" style="width: 100%; font-size: 1rem;">
         <div style=""><h2 id="ctocraftcon">CTO Craft Con</h2>
 
-<h3 id="j.mpdistwork-ccc">j.mp/distwork-ccc</h3></div>
+<h3 id="bit.lyctocraftcon-distwork">bit.ly/ctocraftcon-distwork</h3></div>
       </div>
       <div class="footnotes"></div>
       <div class="footer"><div class="leading"></div><div class="middle"></div><div class="trailing"></div></div>
@@ -248,7 +248,7 @@
       </div>
       <div class="footnotes"></div>
       <div class="footer"><div class="leading"></div><div class="middle"></div><div class="trailing"></div></div>
-</section><section class="variable-size-headings light has-background-image cover-container responsive present has-dark-background fitted" data-background-position=" top" data-background-image="images/engaging-historians.png" data-state="background-filter-darken" data-background-color="#362fff" style="display: grid;" data-updated="true">
+</section><section class="variable-size-headings light has-background-image cover-container responsive present has-dark-background fitted" data-background-image="images/engaging-historians.png" data-background-position=" top" data-state="background-filter-darken" data-background-color="#362fff" style="display: grid;" data-updated="true">
 
       <div class="header"><div class="leading"></div><div class="middle"></div><div class="trailing"></div></div>
       <div class="layout-cover" style="width: 100%; font-size: 1rem;">
@@ -740,7 +740,7 @@
       </div>
       <div class="footnotes"></div>
       <div class="footer"><div class="leading"></div><div class="middle"></div><div class="trailing"></div></div>
-</section><section class="variable-size-headings light has-background-image section-container responsive present has-dark-background fitted" data-background-image="images/tux.png" data-background-size="contain" data-background-position="right" data-background-color="#c600f7" style="display: grid;" data-updated="true">
+</section><section class="variable-size-headings light has-background-image section-container responsive present has-dark-background fitted" data-background-image="images/tux.png" data-background-position="right" data-background-size="contain" data-background-color="#c600f7" style="display: grid;" data-updated="true">
 
       <div class="header"><div class="leading"></div><div class="middle"></div><div class="trailing"></div></div>
       <div class="layout-section" style="width: 100%; font-size: 1rem;">
